Minor refactoring on day 3. Removed utilities classes Point, Point3D, GridUtils as those are provided from the AOC library