@@ -4,7 +4,6 @@ import com.putoet.resources.ResourceLines;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static java.util.stream.Collectors.groupingBy;
@@ -15,31 +14,31 @@ public class Day20 {
         final List<Particle> particles = IntStream.range(0, lines.size())
                 .mapToObj(i -> Particle.of(i, lines.get(i)))
                 .sorted(Comparator.naturalOrder())
-                .collect(Collectors.toList());
+                .toList();
 
         System.out.println("Closest particle (on the long run) will me " + particles.get(0));
 
         final List<Particle> distinct = removeColliding(particles);
-        System.out.println("There are " + distinct.size() + " uncolliding particles");
+        System.out.println("There are " + distinct.size() + " non-colliding particles");
     }
 
     public static List<Particle> removeColliding(List<Particle> particles) {
         int size = particles.size();
-        int unchanaged = 0;
+        int unchanged = 0;
         List<Particle> next = particles;
 
-        while (unchanaged < 1000) {
+        while (unchanged < 1000) {
             next = next.stream()
                     .map(Particle::step)
                     .collect(groupingBy(Particle::position)).values().stream()
                     .filter(l -> l.size() == 1)
                     .flatMap(List::stream)
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (next.size() == size) {
-                unchanaged++;
+                unchanged++;
             } else {
-                unchanaged = 0;
+                unchanged = 0;
                 size = next.size();
             }
         }
